@@ -419,11 +419,19 @@ static int cif_lexer( FILE *in, cexception_t *ex )
             }
             break;
         case '[': case ']': case '{': case '}':
-            if( yy_flex_debug ) {
-                printf( ">>> LIST/TABLE DELIMITER\n" );
-            }
             qstring_seen = 0;
-            return ch;
+            int after = getlinec( in, ex );
+            ungetlinec( after, in );
+            if( ch == '[' || ch == '{' || after == ']' || after == '}' ||
+                after == EOF || isspace( after ) ) {
+                if( yy_flex_debug ) {
+                    printf( ">>> LIST/TABLE DELIMITER\n" );
+                }
+                return ch;
+            }
+            /* else this is not a correct closing brace, as it has to be
+               followed by a space -- drop through to the 'default:' case
+               (no break here, deliberately!): */
         case ':':
             if( qstring_seen == 1 ) {
                 /* table entry separator */
