@@ -1,5 +1,5 @@
 ./cifparse: tests/cifparse_125.inp(4,20) data_table: ERROR, incorrect CIF syntax:
- 
+ _tag [ 1 2 3 4 [ 5 6 ]
                     ^
 ./cifparse: tests/cifparse_125.inp: compiler could not recover from errors, quitting now -- 1 error(s) detected
 ./cifparse: file 'tests/cifparse_125.inp' FAILED
