@@ -1,0 +1,5 @@
+./cifparse: tests/cifparse_141.inp(5,21) data_table: ERROR, incorrect CIF syntax:
+   { 'key': 'value' },
+                     ^
+./cifparse: tests/cifparse_141.inp: compiler could not recover from errors, quitting now -- 1 error(s) detected
+./cifparse: file 'tests/cifparse_141.inp' FAILED
